--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "npx ts-node-dev ./server.ts",
     "start": "npx ts-node ./server.ts"
-
   },
   "repository": {
     "type": "git",
@@ -25,15 +24,19 @@
   },
   "homepage": "https://github.com/dommentee/booking-site-back#readme",
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
+    "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.2.2"
+    "mongoose": "^6.2.2",
+    "ts-node-dev": "^2.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
