--- a/package.json
+++ b/package.json
@@ -29,15 +29,21 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
+    "@types/morgan": "^1.9.4",
+    "@types/node": "^18.15.10",
+    "@types/validator": "^13.7.14",
     "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-async-errors": "^3.1.1",
+    "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.2",
-    "ts-node-dev": "^2.0.0"
+    "morgan": "^1.10.0",
+    "ts-node-dev": "^2.0.0",
+    "validator": "^13.9.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
