--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "server.ts",
   "engines": {
-    "node": "16.13.0",
-    "npm": "8.1.0"
+    "node": ">=16.13.0",
+    "npm": ">=9.3.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -32,7 +32,7 @@
     "@types/morgan": "^1.9.4",
     "@types/node": "^18.15.10",
     "@types/validator": "^13.7.14",
-    "bcrypt": "^5.0.1",
+    "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
@@ -40,7 +40,7 @@
     "express-async-errors": "^3.1.1",
     "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.2.2",
+    "mongoose": "^7.5.0",
     "morgan": "^1.10.0",
     "ts-node-dev": "^2.0.0",
     "validator": "^13.9.0"
